--- a/Gibson_report.ipynb
+++ b/Gibson_report.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeioatWi7VfDSD4Lh8WTGo",
+      "authorship_tag": "ABX9TyNKwzJ29NffmTHTepJOYTdg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -698,15 +698,24 @@
         "from datetime import datetime\n",
         "import re\n",
         "\n",
+        "import tabula\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "from datetime import datetime\n",
+        "import re\n",
+        "from dateutil import parser\n",
+        "\n",
         "def clean_ordinal(date_string):\n",
         "    # Remove ordinal suffixes such as 'st', 'nd', 'rd', 'th'\n",
         "    return re.sub(r'(\\d+)(st|nd|rd|th)', r'\\1', date_string)\n",
         "\n",
         "def clean_date_string(date_string):\n",
-        "    # Regular expression to find the date portion\n",
+        "    # Enhanced regular expression to handle more complex cases including prefixes and separators\n",
         "    match = re.search(r'\\d{1,2}(st|nd|rd|th)?\\s+[a-zA-Z]+\\s+\\d{4}', date_string)\n",
+        "    if not match:\n",
+        "        # Try another pattern if the first fails\n",
+        "        match = re.search(r'\\d{1,2}[-/]\\s*\\d{1,2}[-/]\\d{4}', date_string)\n",
         "    if match:\n",
-        "        # Apply clean_ordinal to the matched date string\n",
         "        return clean_ordinal(match.group(0))\n",
         "    else:\n",
         "        return None\n",
@@ -721,8 +730,11 @@
         "                raw_date_string = date_text_df.iloc[0, 0]\n",
         "                cleaned_date_string = clean_date_string(raw_date_string)\n",
         "                if cleaned_date_string:\n",
-        "                    date_object = datetime.strptime(cleaned_date_string, '%d %B %Y')\n",
-        "                    return date_object.strftime('%Y-%m-%d')\n",
+        "                    try:\n",
+        "                        date_object = parser.parse(cleaned_date_string)\n",
+        "                        return date_object.strftime('%Y-%m-%d')\n",
+        "                    except ValueError:\n",
+        "                        return \"Date format not recognized\"\n",
         "                else:\n",
         "                    return \"Date format not recognized\"\n",
         "            else:\n",
@@ -733,11 +745,7 @@
         "        print(f\"Error extracting date from {pdf_path}: {e}\")\n",
         "        return None\n",
         "\n",
-        "# Example usage of the function\n",
-        "pdf_path = \"/gibson\"\n",
-        "extracted_date = extract_date_from_pdf(pdf_path)\n",
-        "print(f\"Extracted Date: {extracted_date}\")\n",
-        "\n",
+        "# Modify other functions similarly to handle unexpected data formats more gracefully\n",
         "\n",
         "\n",
         "def extract_and_validate_tables(pdf_path, expected_columns):\n",
@@ -776,7 +784,7 @@
         "# Example usage\n",
         "pdf_directory = '/gibson'\n",
         "expected_columns = ['Mts', 'US $/pmt', 'vs Previous week']\n",
-        "output_csv_path = 'combined_data_2019-2023.csv'  # Specify the path to save the CSV file\n",
+        "output_csv_path = 'combined_data_2020.csv'  # Specify the path to save the CSV file\n",
         "combined_data = process_pdfs(pdf_directory, expected_columns, output_csv_path)\n",
         "\n",
         "# The combined DataFrame is also returned if you need to use it further in the script\n",
